add search button + smoothie list component

--- a/frontend/src/app/home/ingredient-list/ingredient-list.component.html
+++ b/frontend/src/app/home/ingredient-list/ingredient-list.component.html
@@ -1,3 +1,4 @@
 <div id="ingredientList">
   <p *ngFor="let i of ingredients">{{i.name}}</p>
 </div>
+<button (click)="onSearchPressed()">Search</button>
